--- a/src/app/pied-page/pied-page.component.css
+++ b/src/app/pied-page/pied-page.component.css
@@ -1,8 +1,10 @@
-#footer {
-  position:absolute;
-  bottom:0;  /* on le colle en bas */
+footer {
+  position:fixed;
+  bottom:0px;
   width:100%;
   background-color: lightgrey;
+  display:flex;
 }
+
 
 
