Composant card jeu

--- a/src/app/carte-jeu/carte-jeu.component.html
+++ b/src/app/carte-jeu/carte-jeu.component.html
@@ -1,11 +1,11 @@
 <div>
-<mat-card class="example-card">
+  <mat-spinner *ngIf="loading"></mat-spinner>
+<mat-card class="example-card" *ngIf="!loading">
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title><h3>{{jeu.id}}</h3></mat-card-title>
     <mat-card-subtitle>{{jeu.nom}}</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image src="{{jeu.url_media}}" alt="Photo du jeu" style="align-self:center;">
   <mat-card-content>
     <p>Description :  {{jeu.description}} </p>
 
@@ -16,10 +16,7 @@
     <p>Joueurs Maximum: {{ jeu.nombre_joueurs_max }} </p>
     <p>Durée : {{jeu.duree_partie}} </p>
 
-    <p>Catégorie : {{jeu.categorie_id}}</p>
-    <p>Editeur : {{ jeu.editeur_id }} </p>
-    <p>Theme : {{jeu.theme_id}} </p>
-    
+
   </mat-card-content>
 </mat-card>
 </div>
