--- a/src/app/carte-jeu/carte-jeu.component.html
+++ b/src/app/carte-jeu/carte-jeu.component.html
@@ -1,20 +1,19 @@
 <div>
-  <mat-spinner *ngIf="loading"></mat-spinner>
-<mat-card class="example-card" *ngIf="!loading">
+<mat-card class="example-card">
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title><h3>{{jeu.id}}</h3></mat-card-title>
-    <mat-card-subtitle>{{jeu.nom}}</mat-card-subtitle>
+    <mat-card-title><h3>{{jeux.id}}</h3></mat-card-title>
+    <mat-card-subtitle>{{jeux.nom}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <p>Description :  {{jeu.description}} </p>
+    <p>Description :  {{jeux.description}} </p>
 
-    <p>Age minimum :  {{jeu.age_min}} </p>
-    <p>Langues :  {{jeu.langue}} </p>
+    <p>Age minimum :  {{jeux.age_min}} </p>
+    <p>Langues :  {{jeux.langue}} </p>
 
-    <p>Joueurs Minimums : {{jeu.nombre_joueurs_min}}</p>
-    <p>Joueurs Maximum: {{ jeu.nombre_joueurs_max }} </p>
-    <p>Durée : {{jeu.duree_partie}} </p>
+    <p>Joueurs Minimums : {{jeux.nombre_joueurs_min}}</p>
+    <p>Joueurs Maximum: {{ jeux.nombre_joueurs_max }} </p>
+    <p>Durée : {{jeux.duree_partie}} </p>
 
 
   </mat-card-content>
