--- a/src/app/details-jeu/details-jeu.component.html
+++ b/src/app/details-jeu/details-jeu.component.html
@@ -6,3 +6,6 @@
 <p>Joueurs Minimums : {{jeu.nombre_joueurs_min}}</p>
 <p>Joueurs Maximum: {{ jeu.nombre_joueurs_max }} </p>
 <p>Durée : {{jeu.duree_partie}} </p>
+<p>Cathegorie : {{jeu.categorie}}</p>
+<p>Theme : {{jeu.theme}}</p>
+<p>Prix d'achat : nc</p>
